# wpm-widget

./: README.md  pyproject.toml  setup.py
src/wpm_widget/: main.py
src/wpm_widget/_core/: __init__.py  data_storage.py  keyboard_monitor.py  wpm_calculator.py
src/wpm_widget/_utils/: __init__.py
src/wpm_widget/gui/: __init__.py  menubar.py  widget.py
